from enum import Enum


class ColorSpace(Enum):
    RGB = "RGB"
    HSV = "HSV"
    GRAYSCALE = "Grayscale"
